mainunified_test_20250903_222010.txt
  File "/mnt/c/large_project/linux_red_heart/main_unified.py", line 1594
    except Exception as e:
    ^^^^^^
SyntaxError: invalid syntax
